# serializer

./: CMakeLists.txt  README.md  buildAndRun.sh
include/: List.hpp  ListSerializer.hpp
src/: List.cpp  ListSerializer.cpp  main.cpp
tests/: CMakeLists.txt  test_serializer.cpp
